space between buttons

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
 <body>
 
     <div class="content">
-        <h1>Μοιραστείτε τις Στιγμές του Γάμου</h1>
+        <h1>Μοιράσου τις Στιγμές του Γάμου</h1>
         <p>Θα χαρούμε να μοιραστείς μαζί μας τις όμορφες στιγμές από τη γιορτή μας. Ανεβάσε όσες φωτογραφίες και βίντεο επιθυμείς! </p>
 
         <!-- Dropbox file request link -->
         <a href="https://www.dropbox.com/request/TEIi8ij2LtazRGSIJcoU" target="_blank" class="btn">Ανεβάσε Φωτογραφίες</a>
 
-
+        </p>
         <!-- Dropbox view-only folder link -->
         <a href="https://tinyurl.com/yptfvfcy" target="_blank" class="btn">Μετάβαση στο άλμπουμ</a>
     </div>
