--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Γιάννης & Άννα</title>
     <link rel="icon" href="assets/favicon.png" type="image/png">
-    <link rel="stylesheet" href="style.css?v=1.4">
-    <script src="script.js?v=1.4"></script>
+    <link rel="stylesheet" href="style.css?v=1.5">
+    <script src="script.js?v=1.5"></script>
     <style>
+        /* Wrapper for the fixed background */
+        .background-wrapper {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background: url('./assets/image.jpg') no-repeat center center fixed;
+            background-size: cover;
+            z-index: -1; /* Place it behind content */
+        }
+
         /* General Styling */
         body {
             font-family: 'Georgia', serif;
@@ -20,61 +32,47 @@
             min-height: 100vh;
             text-align: center;
             color: #fff;
-            padding: 0 10%; /* Add 10% padding on the left and right for the text */
-            
-            overflow-x: hidden;  /* Prevent horizontal scrolling */
-            overflow-y: auto;    /* Allow vertical scrolling only when necessary */
+            padding: 0 10%;
+            overflow-x: hidden;
+            overflow-y: auto;
             position: relative;
         }
 
-        /* Background image as a pseudo-element to simulate fixed background */
-        body::before {
-            content: "";
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100vh;
-            background: url('./assets/image.jpg') no-repeat center center;
-            background-size: cover;
-            z-index: -1; /* Place it behind the content */
-        }
-
         h1 {
-            font-family: 'Dancing Script', cursive; /* Elegant cursive font */
+            font-family: 'Dancing Script', cursive;
             color: #f9f6f7;
             font-size: 48px;
             margin-bottom: 20px;
-            text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8); /* Strong shadow for readability */
+            text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
         }
 
         p {
-            font-size: 22px; /* Increased base font size */
+            font-size: 22px;
             margin-bottom: 20px;
             margin-top: 20px;
             color: #f0ece2;
-            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.8); /* Stronger shadow */
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.8);
         }
 
-        /* Buttons for Upload and View Files */
+        /* Buttons */
         .btn {
             display: block;
-            width: 80%; /* Adjust width for layout */
-            max-width: 300px; /* Set a max width */
-            margin: 20px auto; /* Add vertical space between buttons */
+            width: 80%;
+            max-width: 300px;
+            margin: 20px auto;
             padding: 15px 30px;
             font-size: 20px;
             color: #fff;
-            background-color: #e6a1a6; /* Soft blush tone */
+            background-color: #e6a1a6;
             text-decoration: none;
             border-radius: 50px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5); /* Strong shadow */
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
             transition: background-color 0.3s ease, box-shadow 0.3s ease;
         }
 
         .btn:hover {
-            background-color: #f2999d; /* Slightly darker on hover */
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.7); /* Stronger hover shadow */
+            background-color: #f2999d;
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.7);
         }
 
         /* Media Queries for responsiveness */
@@ -129,6 +127,10 @@
 </head>
 <body>
 
+    <!-- Background Wrapper -->
+    <div class="background-wrapper"></div>
+
+    <!-- Content -->
     <div class="content">
         <h1>Μοιραστείτε τις Στιγμές του Γάμου</h1>
         <p>Θα χαρούμε να μοιραστείς μαζί μας τις όμορφες στιγμές από τη γιορτή μας. Ανεβάσε όσες φωτογραφίες και βίντεο επιθυμείς! </p>
@@ -136,7 +138,6 @@
         <!-- Dropbox file request link -->
         <a href="https://www.dropbox.com/request/TEIi8ij2LtazRGSIJcoU" target="_blank" class="btn">Ανεβάσε Φωτογραφίες</a>
 
-        <p> </p>
         <!-- Dropbox view-only folder link -->
         <a href="https://tinyurl.com/yptfvfcy" target="_blank" class="btn">Μετάβαση στο άλμπουμ</a>
     </div>
