--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Γιάννης & Άννα</title>
     <link rel="icon" href="assets/favicon.png" type="image/png">
-    <link rel="stylesheet" href="style.css?v=1.1">
-    <script src="script.js?v=1.1"></script>
+    <link rel="stylesheet" href="style.css?v=1.8">
+    <script src="script.js?v=1.8"></script>
     <style>
         /* Background Wrapper */
         .background-wrapper {
@@ -14,8 +14,8 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100vh;
-            background: url('./assets/image.jpg') no-repeat center center fixed;
+            height: 100%;
+            background: url('./assets/image.jpg') no-repeat center center;
             background-size: cover;
             z-index: -1; /* Place it behind content */
         }
@@ -38,13 +38,12 @@
             text-align: center;
             padding: 20px;
             max-width: 600px;
-            min-height: 100vh;
             box-sizing: border-box;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            overflow-y: auto; /* Enables scrolling when content overflows */
+            overflow-y: auto;
         }
 
         h1 {
