--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Γιάννης & Άννα</title>
     <link rel="icon" href="assets/favicon.png" type="image/png">
-    <link rel="stylesheet" href="style.css?v=1.8">
-    <script src="script.js?v=1.8"></script>
+    <link rel="stylesheet" href="style.css?v=1.9">
+    <script src="script.js?v=1.9"></script>
     <style>
         /* Background Wrapper */
         .background-wrapper {
@@ -18,6 +18,17 @@
             background: url('./assets/image.jpg') no-repeat center center;
             background-size: cover;
             z-index: -1; /* Place it behind content */
+        }
+
+        /* Overlay */
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5); /* Dark overlay with opacity */
+            z-index: 0; /* Just above the background */
         }
 
         /* General Styling */
@@ -43,7 +54,8 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            overflow-y: auto;
+            overflow-y: auto; /* Enables scrolling when content overflows */
+            z-index: 1; /* Above the overlay */
         }
 
         h1 {
@@ -136,6 +148,9 @@
 
     <!-- Background Wrapper -->
     <div class="background-wrapper"></div>
+    
+    <!-- Overlay -->
+    <div class="overlay"></div>
 
     <!-- Content -->
     <div class="content">
