--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Γιάννης & Άννα</title>
     <link rel="icon" href="assets/favicon.png" type="image/png">
-    <link rel="stylesheet" href="style.css?v=1.9">
-    <script src="script.js?v=1.9"></script>
+    <link rel="stylesheet" href="style.css?v=1.10">
+    <script src="script.js?v=1.10"></script>
     <style>
         /* Background Wrapper */
         .background-wrapper {
@@ -154,11 +154,11 @@
 
     <!-- Content -->
     <div class="content">
-        <h1>Μοιραστείτε τις Στιγμές του Γάμου</h1>
-        <p>Θα χαρούμε να μοιραστείς μαζί μας τις όμορφες στιγμές από τη γιορτή μας. Ανεβάσε όσες φωτογραφίες και βίντεο επιθυμείς! </p>
+        <h1>Γιάννης - Άννα<br>27/10/24</h1>
+        <p>Μοιράσου τις στιγμές του γάμου! </p>
 
         <!-- Dropbox file request link -->
-        <a href="https://www.dropbox.com/request/TEIi8ij2LtazRGSIJcoU" target="_blank" class="btn">Ανεβάσε Φωτογραφίες</a>
+        <a href="https://www.dropbox.com/request/5SupWIydWrAo74DqozJc" target="_blank" class="btn">Ανέβασε Φωτογραφίες</a>
 
         <!-- Dropbox view-only folder link -->
         <a href="https://tinyurl.com/yptfvfcy" target="_blank" class="btn">Μετάβαση στο άλμπουμ</a>
